ide switch, still doing setup

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,52 @@
 /tests
 test/compare.exe
 test/build.exe
+/cmake-build-debug/.ninja_deps
+/cmake-build-debug/.ninja_log
+/.vs/calc/v16/.suo
+/cmake-build-debug/CMakeFiles/3.21.1/CompilerIdC/a.exe
+/cmake-build-debug/CMakeFiles/3.21.1/CompilerIdCXX/a.exe
+/cmake-build-debug/CMakeFiles/calc.dir/BET.cpp.obj
+/cmake-build-debug/build.ninja
+/cmake-build-debug/.cmake/api/v1/query/cache-v2
+/cmake-build-debug/.cmake/api/v1/reply/cache-v2-f4e6e927f3a447bb51a1.json
+/cmake-build-debug/calc.exe
+/cmake-build-debug/CMakeFiles/calc.dir/calculator.cpp.obj
+/cmake-build-debug/CMakeFiles/clion-environment.txt
+/cmake-build-debug/CMakeFiles/clion-log.txt
+/cmake-build-debug/CMakeFiles/cmake.check_cache
+/cmake-build-debug/cmake_install.cmake
+/cmake-build-debug/CMakeCache.txt
+/cmake-build-debug/CMakeFiles/3.21.1/CMakeCCompiler.cmake
+/cmake-build-debug/CMakeFiles/3.21.1/CompilerIdC/CMakeCCompilerId.c
+/cmake-build-debug/CMakeFiles/3.21.1/CMakeCXXCompiler.cmake
+/cmake-build-debug/CMakeFiles/3.21.1/CompilerIdCXX/CMakeCXXCompilerId.cpp
+/cmake-build-debug/CMakeFiles/3.21.1/CMakeDetermineCompilerABI_C.bin
+/cmake-build-debug/CMakeFiles/3.21.1/CMakeDetermineCompilerABI_CXX.bin
+/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
+/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-daf4c502220451c30fd8.json
+/cmake-build-debug/CMakeFiles/CMakeOutput.log
+/cmake-build-debug/CMakeFiles/3.21.1/CMakeRCCompiler.cmake
+/cmake-build-debug/CMakeFiles/3.21.1/CMakeSystem.cmake
+/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
+/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-4c38a1a7cbd33c8850ec.json
+/cmake-build-debug/CMakeFiles/calc.dir/dictionary.cpp.obj
+/cmake-build-debug/.cmake/api/v1/reply/directory-.-DEBUG-d0094a50bb2071803777.json
+/cmake-build-debug/CMakeFiles/calc.dir/expression.cpp.obj
+/cmake-build-debug/CMakeFiles/calc.dir/function.cpp.obj
+/cmake-build-debug/.cmake/api/v1/reply/index-2022-02-01T21-25-13-0998.json
+/cmake-build-debug/CMakeFiles/calc.dir/input.cpp.obj
+/cmake-build-debug/Testing/Temporary/LastTest.log
+/cmake-build-debug/CMakeFiles/calc.dir/main.cpp.obj
+/cmake-build-debug/CMakeFiles/calc.dir/number.cpp.obj
+/cmake-build-debug/CMakeFiles/calc.dir/output.cpp.obj
+/.vs/ProjectSettings.json
+/cmake-build-debug/CMakeFiles/rules.ninja
+/.vs/slnx.sqlite
+/cmake-build-debug/CMakeFiles/calc.dir/symbol.cpp.obj
+/cmake-build-debug/.cmake/api/v1/reply/target-calc-DEBUG-d794cc3819236ab8e813.json
+/cmake-build-debug/CMakeFiles/TargetDirectories.txt
+/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
+/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-50d408e93673c83158bc.json
+/cmake-build-debug/CMakeFiles/calc.dir/util.cpp.obj
+/.vs/VSWorkspaceState.json
