--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set ( APP_NAME calc )
 
 set ( SRC_DIR D:/infa/labINFA2/calc )
 set( CMAKE_BUILD_TYPE DEBUG )
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
 
 list(APPEND SRC ${SRC_DIR}/main.cpp )
 list(APPEND SRC ${SRC_DIR}/BET.cpp )
