--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -63,7 +63,7 @@ jobs:
     #    uses a compiled language
 
     - run: |
-        make
+        make release
     #   make bootstrap
     #   make release
 
