--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 /.vscode
 /build.exe
+/calculator.exe
 /deprecated
 /lines.py
 /.gitignore
 /tests
+/nichaCodeGenerator.py
 /objects
 test/compare.exe
 test/build.exe
